--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,11 @@
     <!-- <script src="../spec/assert.js"></script> -->
   </head>
   <body>
-    <h1>TEST</h1>
-    <div id="app">hello</div>
-    <script src="../lib/note-controller.js"></script>
+    <script src="../lib/note-model.js"></script>
+    <script src="../spec/note-tests.js"></script>
+    <script src="../lib/note-list-model.js"></script>
+    <script src="../spec/note-list-model-tests.js"></script>
+    <script src="../lib/note-list-view.js"></script>
+    <script src="../spec/note-list-view-tests.js"></script>
   </body>
 </html>
