--- a/views/index.html
+++ b/views/index.html
@@ -2,21 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>nOteS</title>
-    <script src="../lib/note-model.js"></script>
-    <script src="../spec/note-tests.js"></script>
-    <script src="../lib/note-list-model.js"></script>
-    <script src="../spec/note-list-model-tests.js"></script>
-    <script src="../lib/note-list-view.js"></script>
-    <script src="../spec/note-list-view-tests.js"></script>
-    <!-- <script src="../spec/assert.js"></script> -->
+    <title></title>
   </head>
   <body>
-    <script src="../lib/note-model.js"></script>
-    <script src="../spec/note-tests.js"></script>
-    <script src="../lib/note-list-model.js"></script>
-    <script src="../spec/note-list-model-tests.js"></script>
-    <script src="../lib/note-list-view.js"></script>
-    <script src="../spec/note-list-view-tests.js"></script>
+    <h1>TEST</h1>
+    <div id="app">hello</div>
+
+    <script src="../lib/note-controller.js"></script>
+        <script src="../lib/note-list-view.js"></script>
+        <script src="../lib/note-list-model.js"></script>
+        <script src="../lib/note-model.js"></script>
+    <script src="../app.js"></script>
   </body>
+
 </html>
